--- a/conf/application.conf
+++ b/conf/application.conf
@@ -15,18 +15,36 @@
 # This is the main configuration file for the application.
 # ~~~~~
 
+include "backend.conf"
+
 appName=lightweight-contact-events
+
+# An ApplicationLoader that uses Guice to bootstrap the application.
+play.application.loader = "uk.gov.hmrc.play.bootstrap.ApplicationLoader"
+
+# Primary entry point for all HTTP requests on Play applications
+play.http.requestHandler = "uk.gov.hmrc.play.bootstrap.http.RequestHandler"
+
+# Provides an implementation of AuditConnector. Use `uk.gov.hmrc.play.bootstrap.AuditModule` or create your own.
+# An audit connector must be provided.
+play.modules.enabled += "uk.gov.hmrc.play.bootstrap.AuditModule"
+
+# Provides an implementation of MetricsFilter. Use `uk.gov.hmrc.play.graphite.GraphiteMetricsModule` or create your own.
+# A metric filter must be provided
+play.modules.enabled += "uk.gov.hmrc.play.graphite.GraphiteMetricsModule"
+
+# Provides an implementation and configures all filters required by a Platform frontend microservice.
+play.modules.enabled += "uk.gov.hmrc.play.bootstrap.MicroserviceModule"
+play.http.filters = "uk.gov.hmrc.play.bootstrap.filters.MicroserviceFilters"
+
+# Json error handler
+play.http.errorHandler = "uk.gov.hmrc.play.bootstrap.http.JsonErrorHandler"
+
 
 # Play Modules
 # ~~~~
 # Additional play modules can be added here
-play.modules.enabled += "com.kenshoo.play.metrics.PlayModule"
 play.modules.enabled += "play.modules.reactivemongo.ReactiveMongoHmrcModule"
-
-# Global request handler
-# ~~~~
-# Set to the object handler for migrated 2.3 services
-play.http.requestHandler = "play.api.http.GlobalSettingsHttpRequestHandler"
 
 # Session Timeout
 # ~~~~
@@ -51,12 +69,6 @@ application.session.secure=false
 # ~~~~~
 application.langs="en"
 
-# Global object class
-# ~~~~~
-# Define the Global object class for this application.
-# Default to Global in the root package.
-application.global=uk.gov.hmrc.lightweightcontactevents.MicroserviceGlobal
-
 # Router
 # ~~~~~
 # Define the Router object to use for this application.
@@ -79,12 +91,6 @@ application.router=prod.Routes
 controllers {
     # 300 is the default, you may need to change this according to your needs
     confidenceLevel = 300
-
-    com.kenshoo.play.metrics.MetricsController = {
-      needsAuth = false
-      needsLogging = false
-      needsAuditing = false
-    }
 
   uk.gov.hmrc.lightweightcontactevents.controllers.SwaggerController = {
       needsAuth = false
@@ -118,17 +124,6 @@ logger.play=INFO
 # Logger provided to your application:
 logger.application=DEBUG
 
-# Metrics plugin settings - graphite reporting is configured on a per env basis
-metrics {
-    name = ${appName}
-    rateUnit = SECONDS
-    durationUnit = SECONDS
-    showSamples = true
-    jvm = true
-    enabled = true
-}
-
-
 # Microservice specific config
 
 auditing {
@@ -142,29 +137,17 @@ auditing {
     }
 }
 
-
 mongodb {
     uri = "mongodb://localhost:27017/lightweight-contact-events"
 }
 
 
 microservice {
-    metrics {
-        graphite {
-            host = graphite
-            port = 2003
-            prefix = play.${appName}.
-            enabled = false
-        }
-    }
-
     services {
-
         auth {
             host=localhost
             port=8500
         }
-
     }
 }
 
