VOAC-38: Json out to email service.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -33,6 +33,9 @@ play.modules.enabled += "uk.gov.hmrc.play.bootstrap.AuditModule"
 # A metric filter must be provided
 play.modules.enabled += "uk.gov.hmrc.play.graphite.GraphiteMetricsModule"
 
+# Startup code
+play.modules.enabled += "uk.gov.hmrc.lightweightcontactevents.utils.StartupModule"
+
 # Provides an implementation and configures all filters required by a Platform frontend microservice.
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.MicroserviceModule"
 play.http.filters = "uk.gov.hmrc.play.bootstrap.filters.MicroserviceFilters"
@@ -150,5 +153,9 @@ microservice {
         }
     }
 }
+
+email.council-tax = "ct@voa.gov.uk"
+email.non-domestic-rates = "ndr@voa.gov.uk"
+
 
 
