VAOC-38: Email connector.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -40,6 +40,9 @@ play.modules.enabled += "uk.gov.hmrc.lightweightcontactevents.utils.StartupModul
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.MicroserviceModule"
 play.http.filters = "uk.gov.hmrc.play.bootstrap.filters.MicroserviceFilters"
 
+# Http client
+play.modules.enabled += "uk.gov.hmrc.play.bootstrap.HttpClientModule"
+
 # Json error handler
 play.http.errorHandler = "uk.gov.hmrc.play.bootstrap.http.JsonErrorHandler"
 
@@ -147,6 +150,10 @@ mongodb {
 
 microservice {
     services {
+        email {
+            host = localhost
+            port = 8300
+        }
         auth {
             host=localhost
             port=8500
@@ -154,8 +161,8 @@ microservice {
     }
 }
 
-email.council-tax = "ct@voa.gov.uk"
-email.non-domestic-rates = "ndr@voa.gov.uk"
+email.council-tax = "ctonline@voa.gsi.gov.uk"
+email.non-domestic-rates = "ndronline@voa.gsi.gov.uk"
 
 
 
