VOAC-BRANCH: Added new config details for production environments.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -143,20 +143,32 @@ auditing {
     }
 }
 
-mongodb {
-    uri = "mongodb://localhost:27017/lightweight-contact-events"
+Dev {
+    microservice {
+        services {
+            email {
+                host = localhost
+                port = 8300
+            }
+            auth {
+                host = localhost
+                port = 8500
+            }
+        }
+    }
 }
 
-
-microservice {
-    services {
-        email {
-            host = localhost
-            port = 8300
-        }
-        auth {
-            host=localhost
-            port=8500
+Prod {
+    microservice {
+        services {
+            email {
+                host = email.protected.mdtp
+                port = 80
+            }
+            auth {
+                host = auth.protected.mdtp
+                port = 80
+            }
         }
     }
 }
