VOAC-BRANCH: Added mongodb details.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -143,7 +143,13 @@ auditing {
     }
 }
 
+
+
 Dev {
+    mongodb {
+        uri = "mongodb://localhost:27017/lightweight-contact-events"
+    }
+
     microservice {
         services {
             email {
@@ -159,6 +165,9 @@ Dev {
 }
 
 Prod {
+    mongodb {
+        uri = "mongodb://dev-app-db-1:27017,dev-app-db-2:27017,dev-app-db-3:27017/lightweight-contact-events"
+    }
     microservice {
         services {
             email {
