VOAC-EMAIL: Changed emails back to VOA emails

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -161,10 +161,8 @@ microservice {
     }
 }
 
-# email.council-tax = "ctonline@voa.gsi.gov.uk"
-# email.non-domestic-rates = "ndronline@voa.gsi.gov.uk"
+email.council-tax = "ctonline@voa.gsi.gov.uk"
+email.non-domestic-rates = "ndronline@voa.gsi.gov.uk"
 
-email.council-tax = "andy.dwelly@digital.hmrc.gov.uk"
-email.non-domestic-rates = "calin.ursaciuc@digital.hmrc.gov.uk"
 
 
