--- a/conf/application.conf
+++ b/conf/application.conf
@@ -158,5 +158,72 @@ microservice {
 email.council-tax = "ctonline@voa.gsi.gov.uk"
 email.non-domestic-rates = "ndronline@voa.gsi.gov.uk"
 
+schema = """
+{
+  "$schema" : "http://json-schema.org/schema#",
+  "description" : "A JSON schema to validate JSON as described in PPM-30048-UEM009-ICD001-HTS-HMRC-Interfaces v1.2.docx",
+
+  "type" : "object",
+  "additionalProperties" : false,
+  "required": ["version", "timestamp", "domain", "categories", "first-name", "last-name", "email", "phone", "property-address", "message"],
+  "properties" : {
+    "version" : {
+      "type" : "integer",
+      "default" : 0
+    },
+    "timestamp" : {
+      "type" : "string"
+    },
+    "domain" : {
+      "type" : "string",
+      "pattern": "CT|NDR"
+    },
+    "categories" : {
+      "type" : "array",
+      "items" : {
+        "type" : "string"
+      }
+    },
+    "first-name" : {
+      "type" : "string"
+    },
+    "last-name" : {
+      "type" : "string"
+    },
+    "email" : {
+      "type" : "string"
+    },
+    "phone" : {
+      "type" : "string"
+    },
+    "property-address": {
+      "type": "object",
+      "additionalProperties": false,
+      "required": ["line1", "town", "postcode"],
+      "properties": {
+        "line1": {
+          "type": "string"
+        },
+        "line2": {
+          "type": "string"
+        },
+        "town": {
+          "type": "string"
+        },
+        "county": {
+          "type": "string"
+        },
+        "postcode": {
+          "type": "string"
+        }
+      }
+    },
+    "message": {
+      "type": "string"
+    }
+  }
+}
+"""
+
 
 
