VOAC-STUB: Changed schema to use camel Case

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -165,7 +165,7 @@ schema = """
 
   "type" : "object",
   "additionalProperties" : false,
-  "required": ["version", "timestamp", "domain", "categories", "first-name", "last-name", "email", "phone", "property-address", "message"],
+  "required": ["version", "timestamp", "domain", "categories", "firstName", "lastName", "email", "phone", "propertyAddress", "message"],
   "properties" : {
     "version" : {
       "type" : "integer",
@@ -184,10 +184,10 @@ schema = """
         "type" : "string"
       }
     },
-    "first-name" : {
+    "firstName" : {
       "type" : "string"
     },
-    "last-name" : {
+    "lastName" : {
       "type" : "string"
     },
     "email" : {
@@ -196,7 +196,7 @@ schema = """
     "phone" : {
       "type" : "string"
     },
-    "property-address": {
+    "propertyAddress": {
       "type": "object",
       "additionalProperties": false,
       "required": ["line1", "town", "postcode"],
