VOAC-103: Added VOA Data Transfer Connector

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -152,6 +152,10 @@ microservice {
             host=localhost
             port=8500
         }
+        voa-data-transfer {
+            host=localhost
+            port=7313
+        }
     }
 }
 
