VOAC-113 Amend output json and enable connection to VOA endpoint

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -156,5 +156,8 @@ microservice {
     }
 }
 
-
+# Json text configuration
+subject.text = "Valuation Office Agency Contact Form"
+email.council-tax = "ctonline@voa.gsi.gov.uk"
+email.non-domestic-rates = "ndronline@voa.gsi.gov.uk"
 
