VOAC-113 tidy conf

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -135,16 +135,12 @@ auditing {
 }
 
 mongodb {
-    uri = "mongodb://localhost:27017/lightweight-contact-events"
+    uri = "mongodb://localhost:27017/"${appName}"?sslEnabled=true"
 }
 
 
 microservice {
     services {
-        email {
-            host = localhost
-            port = 8300
-        }
         auth {
             host=localhost
             port=8500
