VOA-1350 rmoved gsi text

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -154,6 +154,6 @@ microservice {
 
 # Json text configuration
 subject.text = "Valuation Office Agency Contact Form"
-email.council-tax = "ctonline@voa.gsi.gov.uk"
-email.non-domestic-rates = "ndronline@voa.gsi.gov.uk"
+email.council-tax = "ctonline@voa.gov.uk"
+email.non-domestic-rates = "ndronline@voa.gov.uk"
 
