Add module to start scheduler in DI container.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -139,6 +139,14 @@ mongodb {
 }
 
 
+# module to start scheduler for export to VOA
+play.modules.enabled += "uk.gov.hmrc.lightweightcontactevents.SchedulerModule"
+
+voaExport {
+    enable = true
+}
+
+
 microservice {
     services {
         auth {
