--- a/conf/application.conf
+++ b/conf/application.conf
@@ -135,7 +135,7 @@ auditing {
 }
 
 mongodb {
-    uri = "mongodb://localhost:27017/"${appName}"?sslEnabled=true"
+    uri = "mongodb://localhost:27017/lightweight-contact-events?rm.tcpNoDelay=true&rm.nbChannelsPerNode=4&writeConcern=unacknowledged"
 }
 
 
