Refactor build file

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -70,7 +70,7 @@ application.session.secure=false
 
 # The application languages
 # ~~~~~
-play.i18n.langs="en"
+play.i18n.langs=["en"]
 
 # Router
 # ~~~~~
