VOA-2573 Send CF form to correct email

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -149,6 +149,8 @@ microservice {
 
 # Json text configuration
 subject.text = "Valuation Office Agency Contact Form"
-email.council-tax = "ctonline@voa.gsi.gov.uk"
-email.non-domestic-rates = "ndronline@voa.gsi.gov.uk"
+email.council-tax = "ctonline@voa.gov.uk"
+email.business-rates = "NDRonline@voa.gov.uk"
+email.housing-allowance = "NSOhelpdesk@voa.gov.uk"
+email.other = "ctonline@voa.gov.uk"
 
