--- a/conf/application.conf
+++ b/conf/application.conf
@@ -149,6 +149,10 @@ microservice {
 
 # Json text configuration
 subject.text = "Valuation Office Agency Contact Form"
+subject.additional-info.text = "CF Additional info"
+subject.chase.text = "CF Chase"
+subject.other-additional-info.text = "CF - Other- Additional info"
+subject.other-chase.text = "CF - Other - Chase"
 email.council-tax = "ctonline@voa.gov.uk"
 email.business-rates = "NDRonline@voa.gov.uk"
 email.housing-allowance = "NSOhelpdesk@voa.gov.uk"
