VOA-2632 Change CT email address to CTinbox@voa.gov.uk.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -153,8 +153,8 @@ subject.additional-info.text = "CF Additional info"
 subject.chase.text = "CF Chase"
 subject.other-additional-info.text = "CF - Other- Additional info"
 subject.other-chase.text = "CF - Other - Chase"
-email.council-tax = "ctonline@voa.gov.uk"
+email.council-tax = "CTinbox@voa.gov.uk"
 email.business-rates = "NDRonline@voa.gov.uk"
 email.housing-allowance = "NSOhelpdesk@voa.gov.uk"
-email.other = "ctonline@voa.gov.uk"
+email.other = "CTinbox@voa.gov.uk"
 
