VOA-2717 Changed the email address for business rate

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -154,7 +154,7 @@ subject.chase.text = "CF Chase"
 subject.other-additional-info.text = "CF - Other- Additional info"
 subject.other-chase.text = "CF - Other - Chase"
 email.council-tax = "CTinbox@voa.gov.uk"
-email.business-rates = "NDRonline@voa.gov.uk"
+email.business-rates = "ndrinbox@voa.gov.uk"
 email.housing-allowance = "NSOhelpdesk@voa.gov.uk"
 email.other = "CTinbox@voa.gov.uk"
 
