--- a/conf/application.conf
+++ b/conf/application.conf
@@ -121,7 +121,7 @@ auditing {
 }
 
 mongodb {
-    uri = "mongodb://localhost:27017/lightweight-contact-events?rm.tcpNoDelay=true&rm.nbChannelsPerNode=4&writeConcern=unacknowledged"
+    uri = "mongodb://localhost:27017/lightweight-contact-events"
 }
 
 
