VOA-3451 Upgrade `Contact Forms` with `Play 2.8.18` to prevent Play Multipart Denial of Service

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -17,31 +17,10 @@
 
 include "backend.conf"
 
-appName=lightweight-contact-events
-
-# An ApplicationLoader that uses Guice to bootstrap the application.
-play.application.loader = "uk.gov.hmrc.play.bootstrap.ApplicationLoader"
-
-# Primary entry point for all HTTP requests on Play applications
-play.http.requestHandler = "uk.gov.hmrc.play.bootstrap.http.RequestHandler"
-
-# Provides an implementation of AuditConnector. Use `uk.gov.hmrc.play.bootstrap.AuditModule` or create your own.
-# An audit connector must be provided.
-play.modules.enabled += "uk.gov.hmrc.play.audit.AuditModule"
-
-# Provides an implementation of MetricsFilter. Use `uk.gov.hmrc.play.graphite.GraphiteMetricsModule` or create your own.
-# A metric filter must be provided
-play.modules.enabled += "uk.gov.hmrc.play.bootstrap.graphite.GraphiteMetricsModule"
-
-# Provides an implementation and configures all filters required by a Platform frontend microservice.
-play.modules.enabled += "uk.gov.hmrc.play.bootstrap.backend.BackendModule"
+appName = lightweight-contact-events
 
 # Http client
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.HttpClientModule"
-
-# Json error handler
-play.http.errorHandler = "uk.gov.hmrc.play.bootstrap.backend.http.JsonErrorHandler"
-
 
 # Play Modules
 # ~~~~
@@ -75,7 +54,7 @@ play.i18n.langs=["en"]
 # you may need to define a router file `conf/my.application.routes`.
 # Default to Routes in the root package (and conf/routes)
 # !!!WARNING!!! DO NOT CHANGE THIS ROUTER
-play.http.router=prod.Routes
+play.http.router = prod.Routes
 
 
 # Controller
@@ -100,19 +79,6 @@ controllers {
 # ~~~~~
 # You can disable evolutions if needed
 # evolutionplugin=disabled
-
-# Microservice specific config
-
-auditing {
-    enabled=true
-    traceRequests=true
-    consumer {
-        baseUri {
-            host = localhost
-            port = 8100
-        }
-    }
-}
 
 mongodb {
     uri = "mongodb://localhost:27017/lightweight-contact-events"
